# sittly-launcher

./: LICENSE  README.md  package.json  pnpm-lock.yaml  roadmap.md  spec.md
s/: bootstrap  build  tauri-build
scripts/: tauri-dev.sh
spec/: roadmap.md
src/: init.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/database/: mod.rs
src/devtools/api/: app.ts  clipboard.ts  database.ts  files.ts  music.ts  network.ts  notifications.ts  shell.ts  system.ts
src/extensions/: extension-assembly.ts
src/extensions/ai/: page.tsx
src/extensions/navigation/: context.tsx  no-results.tsx
src/ui/: Command.tsx
